# my-openclaw-extentions

./: .gitignore  README.md
.agents/skills/smart-router-log-analysis/: SKILL.md
.agents/skills/smart-router-routing-tuning/: SKILL.md
.agents/skills/smart-router-runtime-validation/: SKILL.md
.github/: copilot-instructions.md
configs/: openclaw-hybrid.json5
docs/: hybrid-llm-routing-plan.md  ollama-docker-operations.md  smart-router-4tier-followup-batch-2026-03-27.md  smart-router-improvement-roadmap-2026-03-27.md  smart-router-live-batch-analysis-2026-03-27.md  smart-router-live-batch-conclusion-2026-03-28.md  smart-router-log-analysis-2026-03-27.md  smart-router-nano-4tier-validation-2026-03-27.md  smart-router-p0-followup-2026-03-27.md  smart-router-work-summary-2026-03-28.md
docs/photos-classify/: architecture-system-guide.md  benchmark-analysis-2026-03-28.md  benchmark-analysis-2026-06-28.md  benchmark-improvement-2026-03-30.md  benchmark-improvement-2026-06-30.md  chat-intent-improvement-2026-04-02.md  implementation-plan.md  photos-classify.md  review-writeback-workplan.md  skill-plugin-mcp-extension-flow.md
extensions/photos-classify/: README.md  index.ts  openclaw-sdk.d.ts  openclaw.plugin.json  package.json  tsconfig.json
extensions/photos-classify/src/: review-http.test.ts  review-http.ts  vitest-shim.d.ts
extensions/smart-router/: README.md  complexity.test.ts  complexity.ts  index.test.ts  index.ts  openclaw.plugin.json  package-lock.json  package.json  smart-router-log.test.ts  smart-router-log.ts  summarize-smart-router-log.mjs
infra/docker/: .env.example  docker-compose.yml
infra/scripts/: check-ollama.sh  pull-ollama-models.sh
mcp-servers/photo-ranker/: README.md  album_writer.py  artifacts.py  batch_classify.py  db.py  jobs.py  local_writer.py  models.py  pipeline.py  pyproject.toml  review_app.py  scoring.py  server.py  sources.py
mcp-servers/photo-ranker/docs/: improvement-benchmark-2026-03-30.md  large-scale-benchmark-2026-03-30.md  phase5-improvement-plan-2026-03-30.md
mcp-servers/photo-ranker/engines/: aesthetic.py  dedup.py  exif.py  face.py  vlm.py
mcp-servers/photo-ranker/scripts/: benchmark_improvements.py  run_dedup_benchmark.py  run_face_benchmark.py  run_vlm_benchmark.py  validate_icloud_fetch.py  validate_icloud_fetch_terminal.sh  validate_real_photos.py
mcp-servers/photo-ranker/tests/: conftest.py  test_aesthetic.py  test_album_writer.py  test_batch_classify.py  test_db.py  test_dedup.py  test_exif.py  test_face.py  test_integration.py  test_jobs.py  test_local_writer.py  test_models.py  test_pipeline.py  test_review_app.py  test_scoring.py  test_server.py  test_sources.py  test_vlm.py
mcp-servers/photo-source/: README.md  models.py  pyproject.toml  server.py
mcp-servers/photo-source/scripts/: validate_icloud_fetch.py  validate_icloud_fetch_terminal.sh
mcp-servers/photo-source/sources/: apple_photos.py  gcs.py  google_photos.py  local_folder.py
mcp-servers/photo-source/tests/: conftest.py  test_apple_photos.py  test_gcs.py  test_google_photos.py  test_local_folder.py  test_models.py  test_server.py
